tests/errors/import_private.orus
use tests::modules::pub_module

fn main() {
    private_fn()
}

